--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -8,42 +8,31 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
-
-
+    <link rel="apple-touch-icon" href="Z_logo.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+    name="description"
+    content="Acelera tu carrera profesional con cursos y rutas de conocimiento generados por Inteligencia Artificial. Aprende sobre Desarrollo, DevOps, IA, Blockchain y más."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <meta
+    name="keywords"
+    content="LMS, IA, Inteligencia Artificial, Cursos de Tecnología, DevOps, Blockchain, Python, Aprendizaje Online, Zeron Academy"
+    />
+    <meta property="og:title" content="Zeron Academy | El Futuro del Aprendizaje con IA" />
+    <meta property="og:description" content="Acelera tu carrera con cursos y rutas de conocimiento generados por Inteligencia Artificial." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.zeronacademy.com" />
+    <meta property="og:image" content="Z_logo.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Zeron Academy | El Futuro del Aprendizaje con IA" />
+    <meta name="twitter:description" content="Acelera tu carrera con cursos y rutas de conocimiento generados por Inteligencia Artificial." />
+    <meta name="twitter:image" content="Z_logo.png" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <title>Zeron Academy | El Futuro del Aprendizaje con IA</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
