--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     />
     <meta
     name="keywords"
-    content="LMS, IA, Inteligencia Artificial, Cursos de Tecnología, DevOps, Blockchain, Python, Aprendizaje Online, Zeron Academy"
+    content="LMS, IA, Inteligencia Artificial, Cursos de Tecnología, DevOps, Blockchain, Python, Aprendizaje Online, Zeron AcademIA"
     />
     <meta property="og:title" content="Zeron Academy | El Futuro del Aprendizaje con IA" />
     <meta property="og:description" content="Acelera tu carrera con cursos y rutas de conocimiento generados por Inteligencia Artificial." />
@@ -25,11 +25,11 @@
     <meta property="og:url" content="https://www.zeronacademy.com" />
     <meta property="og:image" content="Z_logo.png" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Zeron Academy | El Futuro del Aprendizaje con IA" />
+    <meta name="twitter:title" content="Zeron AcademIA | El Futuro del Aprendizaje con IA" />
     <meta name="twitter:description" content="Acelera tu carrera con cursos y rutas de conocimiento generados por Inteligencia Artificial." />
     <meta name="twitter:image" content="Z_logo.png" />
 
-    <title>Zeron Academy | El Futuro del Aprendizaje con IA</title>
+    <title>Zeron AcademIA | El Futuro del Aprendizaje con IA</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
