--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,16 @@
     <meta name="twitter:description" content="Acelera tu carrera con cursos y rutas de conocimiento generados por Inteligencia Artificial." />
     <meta name="twitter:image" content="Z_logo.png" />
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0LCTS9P1HP"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-0LCTS9P1HP');
+    </script>
+
     <title>Zeron AcademIA | El Futuro del Aprendizaje con IA</title>
   </head>
   <body>
